feat(SP-41): implement endpoint to get all portfolio items of the specified service provider
